--- a/signsorganicgroups/themes/custom/signs/sass/screen.scss
+++ b/signsorganicgroups/themes/custom/signs/sass/screen.scss
@@ -13,11 +13,6 @@
 
 $break-small: 720px;
 $break-large: 1200px;
-
-@mixin ie-linear-gradient($start-color, $end-color) {
-	filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, startColorstr='#{$start-color}', endColorstr='#{$end-color}');
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#{$start-color}', endColorstr='#{$end-color}')";
-}
   
 $base-font-size: 16px; 
 %font1 { font-family: 'open_sansregular', Arial, Helvetica, sans-serif; }
@@ -116,14 +111,9 @@ html {
 
 body {
 	@extend %font1;
-	background: #292929; /* Old browsers */
-	background: -moz-linear-gradient(top, #292929 0%, #020202 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#292929), color-stop(100%,#020202)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #292929 0%,#020202 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #292929 0%,#020202 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #292929 0%,#020202 100%); /* IE10+ */
-	background: linear-gradient(top, #292929 0%,#020202 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#292929', endColorstr='#020202',GradientType=0 ); /* IE6-9 */
+	background-color: #292929; // Old browsers
+    @include filter-gradient(#292929, #020202, vertical); // IE6-9
+    @include background-image(linear-gradient(top, #292929 0%,#020202 100%));
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -168,14 +158,9 @@ button, input[type="submit"], input[type="reset"] {
 	box-shadow: inset 0 1px 1px #fff,
 				0 1px 2px rgba(0,0,0,0.31);
 	
-	background: #ccc; /* Old browsers */
-	background: -moz-linear-gradient(top, #eee 0%, #ccc 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#eee), color-stop(100%,#ccc)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #eee 0%,#ccc 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #eee 0%,#ccc 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #eee 0%,#ccc 100%); /* IE10+ */
-	background: linear-gradient(top, #eee 0%,#ccc 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
+	background-color: #eeeeee; // Old browsers
+	@include filter-gradient(#eeeeee, #cccccc, vertical); // IE6-9
+	@include background-image(linear-gradient(top, #eeeeee 0%,#cccccc 100%));
 }
 
 button:hover, button:active, input[type="submit"]:hover, input[type="submit"]:active, input[type="reset"]:hover, input[type="reset"]:active {
@@ -184,14 +169,9 @@ button:hover, button:active, input[type="submit"]:hover, input[type="submit"]:ac
 	box-shadow: inset 0 1px 1px #fff,
 				0 1px 2px rgba(0,0,0,0.31);
 	
-	background: #ccc; /* Old browsers */
-	background: -moz-linear-gradient(top, #fff 0%, #ddd 100%); /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff), color-stop(100%,#ddd)); /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, #fff 0%,#ddd 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, #fff 0%,#ddd 100%); /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, #fff 0%,#ddd 100%); /* IE10+ */
-	background: linear-gradient(top, #fff 0%,#ddd 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
+	background-color: #ffffff; // Old browsers
+	@include filter-gradient(#ffffff, #dddddd, vertical); // IE6-9
+	@include background-image(linear-gradient(top, #ffffff 0%,#dddddd 100%));
 }
 
 .iframe-rwd  {
